Terminei no curso

--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -47,7 +47,7 @@
                     <button type="button" onclick="Dividir()" id="botao">÷</button>
                 </td>
                 <td>
-                    <button type="button" onabort="Resetar()" id="botaoReset"><img src="/Calculadora/Imagens/Resetar.png" alt="Resetar" width="20" height="20"></button>
+                    <button type="button" onclick="Limpar()" id="botaoReset"><img src="/Imagens//Resetar.png" alt="Resetar" width="20" height="20"></button>
                 </td>
             </tr> 
         </table>
